Update TitleManager.java